@@ -1,0 +1,18 @@
+%Warning-LITENDIAN: t/t_metacmt_ignore.v:7:8: Little bit endian vector: left < right of bit range: [0:1]
+                                            : ... In instance t
+    7 |    reg [0:1] show1;                                      
+      |        ^
+                    ... Use "/* verilator lint_off LITENDIAN */" and lint_on around source to disable this message.
+%Warning-LITENDIAN: t/t_metacmt_ignore.v:9:8: Little bit endian vector: left < right of bit range: [0:3]
+                                            : ... In instance t
+    9 |    reg [0:3] show3;                                      
+      |        ^
+%Warning-LITENDIAN: t/t_metacmt_ignore.v:11:8: Little bit endian vector: left < right of bit range: [0:5]
+                                             : ... In instance t
+   11 |    reg [0:5] show5;                                      
+      |        ^
+%Warning-LITENDIAN: t/t_metacmt_ignore.v:14:8: Little bit endian vector: left < right of bit range: [0:9]
+                                             : ... In instance t
+   14 |    reg [0:9] show9;                                      
+      |        ^
+%Error: Exiting due to
